# tracing-bug-minimal

./: Cargo.toml
src/: main.rs
